ontol/ontol-compiler/test-cases/error/union/is_flattened_union.on
def foo ( // ERROR anonymous union abstraction
    rel .is: // NOTE use a domain-specific unit type instead
    (
        rel .is?: bar
        rel .is?: baz
    )
)

def bar (rel .'type': 'bar')
def baz (rel .'type': 'bar')
